Removed incorrect tj reports docs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 				</section>
 				<section class="hero_search">
 					<h1>Documentation</h1>
-					<p>Everything you need to know about running Techjoomla products.</p>
+					<p>Everything you need to know about using and extending Techjoomla products.</p>
 					{% include search.html %}
 				</section>
 			</div>
