--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 		<header>
 			<div class="wrapper">
 				<section class="top-bar">
-					<div class="logo"><a href="/">{% include logo.html %}</a></div>
+					<div class="logo"><a href="https://techjoomla.com" target="_blank">{% include logo.html %}</a></div>
 					{% include navigation.html %}
 				</section>
 				<section class="hero_search">
