--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,10 @@ layout: default
 		{% endif %}
 		
 		<div class="tutorial-main">
+			<!--<h1>{{ page.title }}</h1>-->
 			{{ content }}
+			{% include categories.html %}
+			{% include tags.html %}
 		</div>
 		<div class="tutorial-share">
 			<a class="modalOpen no-smooth" href="#subscribe">{% include social-icon.html icon="Email" %} Subscribe</a>
