--- a/_sass/tutorials.scss
+++ b/_sass/tutorials.scss
@@ -385,3 +385,56 @@
 	}
 
 }
+.tag {
+  background: #43C6AC;
+  border-radius: 3px 0 0 3px;
+  color: #fff;
+  display: inline-block;
+  height: 26px;
+  line-height: 26px;
+  padding: 0 20px 0 23px;
+  position: relative;
+  margin: 0 10px 10px 0;
+  text-decoration: none;
+  -webkit-transition: color 0.2s;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.tag::before {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+  content: '';
+  height: 6px;
+  left: 10px;
+  position: absolute;
+  width: 6px;
+  top: 10px;
+}
+
+.tag::after {
+  background: #fff;
+  border-bottom: 13px solid transparent;
+  border-left: 10px solid #43C6AC;
+  border-top: 13px solid transparent;
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.tag:hover {
+  background-color: #191654;
+  color: white;
+}
+
+.tag:hover::after {
+   border-left-color: #191654; 
+}
+.underline{
+	text-decoration:underline;
+}
+.tags{
+	margin:0 0 0.7em 0;
+}
