--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,7 +57,7 @@ layout: default
 {% assign related_posts_size = related_posts | size %}
 {% if related_posts_size > 0 %}
 	<div class="related">
-		<h3>Related tutorials</h3>
+		<h3>Related articles</h3>
 
 		{% include listings.html listings=site.related_posts %}
 	</div>
