--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -9,7 +9,7 @@ footer {
 	}
 
 	.copyright {
-		color: $medium-grey;
+		color: $light-grey;
 		margin: 0;
 		text-align: center;
 		font-size: .9em;
@@ -37,7 +37,7 @@ footer {
 	}
 
 	svg {
-		fill: $medium-grey;
+		fill: $light-grey;
 		position: relative;
 		top: 5px;
 		transition: fill 200ms ease-in;
