--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/touch-icon.png" sizes="192x192">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
 		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Merriweather:400italic,400,300italic,300,700,700italic|Open+Sans:400italic,600italic,700italic,700,600,400|Inconsolata:400,700">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 		{% seo %}
@@ -31,27 +33,9 @@
 	</head>
 
 	<body class="{{ page.body_class }}">
-		<header>
-			<div class="wrapper">
-				<section class="top-bar">
-					<div class="logo"><a href="https://techjoomla.com" target="_blank">{% include logo.html %}</a></div>
-					{% include navigation.html %}
-				</section>
-				<section class="hero_search">
-					<h1>Documentation</h1>
-					<p>Everything you need to know about using and extending Techjoomla products.</p>
-					{% include search.html %}
-				</section>
-			</div>
-
-		</header>
 		<section class="content">
-			<div class="wrapper">
 				{{ content }}
-			</div>
 		</section>
-
-		{% include footer.html %}
 		<script>
 			$(function() {
 				$('a[href*=\\#]').not(".no-smooth").on('click', function(event){
