--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -11,14 +11,9 @@
 header {
 	padding: 16px 0 10px 0;
 	color: #fff;
-    background: #43C6AC;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left,#43C6AC ,#191654 );  /* Chrome 10-25, Safari 5.1-6 */ 
-    background: linear-gradient(to left, #43C6AC, #191654); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
-
-
-
+    background: #808080;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #3fada8, #808080);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #3fada8, #808080); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 	form {
 		position: relative;
