--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
 			<span class="heading">{{ name | replace: "-", " " }}</span>
 			<ul>
 				{% assign tutorials = posts | sort: "title" %}
-				{% for tutorial in tutorials %}
+				{% for tutorial in tutorials | sort: "navigation_weight" %}
 					<li {% if tutorial.url == page.url %}class="active"{% endif %}><a href="{{ site.baseurl }}{{ tutorial.url }}">{{ tutorial.title }}</a></li>
 				{% endfor %}
 			</ul>
