Issue #9 fix: Cache Issue resolved

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,13 @@
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		
+		<meta http-equiv="cache-control" content="max-age=0" />
+		<meta http-equiv="cache-control" content="no-cache" />
+		<meta http-equiv="Cache-Control" content="no-store" />
+		<meta http-equiv="pragma" content="no-cache" />
+		<meta name="last-modified" content="2017-11-16 14:44:47 +0530">
+		<meta http-equiv="Expires" content="600" />
 
 		{% seo %}
 		{% feed_meta %}
