--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -35,7 +35,7 @@ ul, ol {
 
 code, pre, tt {
 	font-family: Inconsolata,Consolas,Courier,"Courier New","Liberation Mono",monospace;
-	font-size: .9em;
+	font-size: 1em;
 	white-space: pre-wrap;
 	border-radius: 2px;
 	line-height: 1.4;
