--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -51,13 +51,13 @@ dt, h2 {
 }
 .sidebar{
 	position:fixed;
-	max-width:275px;
+	width:300px;
 	background: #808080;
     background: -webkit-linear-gradient(to bottom, #3fada8, #808080);
     background: linear-gradient(to bottom, #3fada8, #808080);
     padding: 15px;
     box-sizing:border-box;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     height:100vh;
     
@@ -69,6 +69,13 @@ dt, h2 {
 		text-decoration:none;
 		font-weight:600;
     }
+    .panel{
+		display:none;
+		overflow: hidden;
+		padding: 0 10px;
+		border-left: 1px solid #ddd;
+		margin-left: 5px;
+    }
     ul {
 		list-style:none;
 		margin:0;
@@ -77,14 +84,31 @@ dt, h2 {
 			margin:0;
 			padding:0;
 			a{
-				font-weight:500;
-				font-size: 0.8em;
+				font-weight:600;
+				font-size: 0.9em;
+				white-space:nowrap;	
+				max-width: 80%;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				display: block;
 			}
+		}
+		li.active a{
+			color:#ddd;
 		}
     }
     span , i{
+		font-size: 1.1em;
 		color:#fff;
 		font-weight:600;
+		display:inline-block;
+		padding:5px 0;
+		cursor:pointer;
+		margin: 0 10px 0 0;
+		
+    }
+    span{
+		display:block;
     }
 }
 .category-module {
@@ -103,7 +127,7 @@ dt, h2 {
     overflow-y: scroll;
     overflow-x: hidden;
     height: 100%;
-    left: 275px;
+    left: 300px;
     padding:15px 0;
     section {
 		padding:10px 30px;
@@ -113,7 +137,40 @@ dt, h2 {
 	padding:60px 0;
 }
 .home-link{
-margin-bottom:10px;
+	margin-bottom:10px;
 }
 a i.material-icons{vertical-align: sub;}
 .pull-right{float:right;}
+.accordion:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #fff;
+    float: right;
+    margin-left: 5px;
+}
+
+.accordion.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+.post-meta
+{
+	font-size:14px;
+	color:#888;
+	padding: 0 5px;
+	i {
+		font-size:18px;
+	}
+	a{
+		color:#888;
+	}
+}
+.sidebar ul li:before{
+	content:' ';
+	border-top:1px solid #ddd;
+	height:1px;
+	width:7px;
+	display:block;
+	position:relative;
+	top:15px;
+	left:-10px;
+}
