--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -11,7 +11,7 @@ body {
 	max-height: 100%;
 	font-family: "Merriweather", serif;
 	letter-spacing: 0.01rem;
-	font-size: 1.8em;
+	font-size: 1.6em;
 	line-height: 1.75em;
 	color: #3A4145;
 	-webkit-font-feature-settings: 'kern' 1;
@@ -41,7 +41,7 @@ h5,
 h6 {
 	color: #2E2E2E;
 	line-height: 1.15em;
-	margin: 0 0 0.4em 0;
+	margin: 0 0 0.2em 0;
 	font-weight: 500;
 }
 
@@ -123,7 +123,7 @@ hr {
 	height: 1px;
 	border: 0;
 	border-top: #EFEFEF 1px solid;
-	margin: 10px 0;
+	margin: 3px 0 15px 0;
 	padding: 0
 }
 
