Issue #000 fix: UI update

--- a/_sass/form.scss
+++ b/_sass/form.scss
@@ -37,7 +37,7 @@ input::-webkit-search-cancel-button {
 
 
 input[type=search] {
-	border: solid 1px #ccc;
+	border: solid 1px #999;
 	padding: 7px 14px 7px 32px;
 
 	-webkit-border-radius: 3px;
