--- a/_sass/tutorials.scss
+++ b/_sass/tutorials.scss
@@ -51,7 +51,7 @@
 
 			svg {
 				margin: 0 5px 0 0;
-				fill: $link-color;
+				fill: #666;
 				width: 25px;
 				height: 25px;
 				-webkit-transition: all .2s ease;
