--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 		<link rel="shortcut icon" href="/favicon.ico">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/touch-icon.png" sizes="192x192">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
-		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Merriweather:400italic,400,300italic,300,700,700italic|Open+Sans:400italic,600italic,700italic,700,600,400|Inconsolata:400,700">
+		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,700,600,400|Inconsolata:400,700">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -20,7 +20,7 @@
 		<meta http-equiv="cache-control" content="no-cache" />
 		<meta http-equiv="Cache-Control" content="no-store" />
 		<meta http-equiv="pragma" content="no-cache" />
-		<meta name="last-modified" content="2017-11-16 14:44:47 +0530">
+		<meta name="last-modified" content="{{site.time}}">
 		<meta http-equiv="Expires" content="600" />
 
 		{% seo %}
