--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -51,32 +51,35 @@ dt, h2 {
 }
 .sidebar{
 	position:fixed;
-	width:300px;
-	background: #808080;
-    background: -webkit-linear-gradient(to bottom, #3fada8, #808080);
-    background: linear-gradient(to bottom, #3fada8, #808080);
-    padding: 15px;
-    box-sizing:border-box;
-    overflow-y: auto;
-    overflow-x: hidden;
-    height:100vh;
+	width:330px;
+	background: #3fada8;
+  background: -webkit-linear-gradient(to bottom, #3fada8, #0b7772);
+  background: linear-gradient(to bottom, #3fada8, #0b7772);
+  padding: 20px;
+  box-sizing: border-box;
+  overflow-y: auto;
+  overflow-x: hidden;
+	height:100vh;
+	box-shadow: 2px 0px 2px #eee;
+	border-right: 1px solid #ccc;
     
-    .logo{
-		text-align:center;
-    }
-    a{
+  .logo{
+		text-align: center;
+		margin: 0 0 30px 0;
+  }
+  a{
 		color:#fff;
 		text-decoration:none;
 		font-weight:600;
-    }
-    .panel{
+  }
+  .panel{
 		display:none;
 		overflow: hidden;
 		padding: 0 10px;
 		border-left: 1px solid #ddd;
 		margin-left: 5px;
-    }
-    ul {
+  }
+  ul {
 		list-style:none;
 		margin:0;
 		padding:0;
@@ -86,8 +89,6 @@ dt, h2 {
 			a{
 				font-weight:600;
 				font-size: 0.9em;
-				white-space:nowrap;	
-				max-width: 80%;
 				overflow: hidden;
 				text-overflow: ellipsis;
 				display: block;
@@ -96,20 +97,19 @@ dt, h2 {
 		li.active a{
 			color:#ddd;
 		}
-    }
-    span , i{
-		font-size: 1.1em;
+  }
+  span , i{
+		font-size: 1em;
 		color:#fff;
 		font-weight:600;
 		display:inline-block;
 		padding:5px 0;
 		cursor:pointer;
 		margin: 0 10px 0 0;
-		
-    }
-    span{
+  }
+  span{
 		display:block;
-    }
+  }
 }
 .category-module {
 	margin: 0;
@@ -127,7 +127,7 @@ dt, h2 {
     overflow-y: scroll;
     overflow-x: hidden;
     height: 100%;
-    left: 300px;
+    left: 330px;
     padding:15px 0;
     section {
 		padding:10px 30px;
