--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -10,5 +10,5 @@ $medium-grey: #666;
 $light-grey: #ccc;
 $header-color: #0c92f1;
 
-$link-color: #4A4A4A;
-$link-hover-color: #111;
+$link-color: #333;
+$link-hover-color: #444;
