--- a/_sass/form.scss
+++ b/_sass/form.scss
@@ -47,8 +47,8 @@ input[type=search] {
 
 
 input:-moz-placeholder {
-	color: #ccc;
+	color: #999;
 }
 input::-webkit-input-placeholder {
-	color: #ccc;
+	color: #999;
 }
